# polyfetch

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
.claude/: CLAUDE.md  settings.json
.claude/skills/experiment-invariants/: SKILL.md
clients/cpp/: CMakeLists.txt
clients/cpp/include/: fetch.hpp  process.hpp  report.hpp  sha256.hpp
clients/cpp/src/: fetch.cpp  main.cpp  process.cpp  report.cpp  sha256.cpp
clients/go/: fetch.go  go.mod  main.go  parseargs.go  process.go  report.go
clients/python/: fetch.py  polyfetch.py  process.py  pyproject.toml  report.py
clients/typescript/: package-lock.json  package.json  tsconfig.json
clients/typescript/src/: fetch.ts  polyfetch.ts  process.ts  report.ts  types.ts  worker.ts
scripts/: compare.sh  run.sh  run_all.sh
server/: Dockerfile  README.md  go.mod  main.go
shared/: gen_targets.sh
